vendor/switchtec/inc/switchtec/switchtec.h

struct switchtec_dev;
/**
 * @brief Return Link error injection command outputs for DLLP, DLLP_CRC,
 * LCRC, SEQ_NUM, ACK_NACK, CTO.
 */

int switchtec_inject_err_dllp(struct switchtec_dev *dev, int phys_port_id,
                	      int data);
int switchtec_inject_err_dllp_crc(struct switchtec_dev *dev, int phys_port_id,
                		  int enable, uint16_t rate);
int switchtec_inject_err_tlp_lcrc(struct switchtec_dev *dev, int phys_port_id,
                		  int enable, uint8_t rate);
int switchtec_inject_err_tlp_seq_num(struct switchtec_dev *dev, int phys_port_id);
int switchtec_inject_err_ack_nack(struct switchtec_dev *dev, int phys_port_id,
                		  uint16_t seq_num, uint8_t count);
int switchtec_inject_err_cto(struct switchtec_dev *dev, int phys_port_id);
struct switchtec_rcvr_obj {
	int port_id;
	int lane_id;
	int ctle;
	int target_amplitude;
	int speculative_dfe;
	int dynamic_dfe[7];
};
struct switchtec_port_eq_coeff {
	uint8_t lane_cnt;
	uint8_t reserved[3];
	struct {
		uint8_t pre;
		uint8_t post;
	} cursors[16];
};
struct switchtec_port_eq_table {
	int lane_id;
	int step_cnt;

	struct {
		int pre_cursor;
		int post_cursor;
		int fom;
		int pre_cursor_up;
		int post_cursor_up;
		int error_status;
		int active_status;
		int speed;
	} steps[126];
};
struct switchtec_port_eq_tx_fslf {
	int fs;
	int lf;
};
struct switchtec_rcvr_ext {
	int ctle2_rx_mode;
	int dtclk_5;
	int dtclk_8_6;
	int dtclk_9;
};
enum switchtec_diag_pattern {
	SWITCHTEC_DIAG_PATTERN_PRBS_7,
	SWITCHTEC_DIAG_PATTERN_PRBS_11,
	SWITCHTEC_DIAG_PATTERN_PRBS_23,
	SWITCHTEC_DIAG_PATTERN_PRBS_31,
	SWITCHTEC_DIAG_PATTERN_PRBS_9,
	SWITCHTEC_DIAG_PATTERN_PRBS_15,
	SWITCHTEC_DIAG_PATTERN_PRBS_DISABLED,
};
enum switchtec_diag_pattern_link_rate {
	SWITCHTEC_DIAG_PAT_LINK_DISABLED = 0,
	SWITCHTEC_DIAG_PAT_LINK_GEN1 = 1,
	SWITCHTEC_DIAG_PAT_LINK_GEN2 = 2,
	SWITCHTEC_DIAG_PAT_LINK_GEN3 = 3,
	SWITCHTEC_DIAG_PAT_LINK_GEN4 = 4,
	SWITCHTEC_DIAG_PAT_LINK_GEN5 = 5,
	SWITCHTEC_DIAG_PAT_LINK_GEN6 = 6,
};
enum switchtec_diag_ltssm_speed {
	SWITCHTEC_DIAG_LTSSM_GEN1 = 0,
	SWITCHTEC_DIAG_LTSSM_GEN2 = 1,
	SWITCHTEC_DIAG_LTSSM_GEN3 = 2,
	SWITCHTEC_DIAG_LTSSM_GEN4 = 3,
	SWITCHTEC_DIAG_LTSSM_GEN5 = 4,
	SWITCHTEC_DIAG_LTSSM_GEN6 = 5,
};
enum switchtec_diag_end {
	SWITCHTEC_DIAG_LOCAL,
	SWITCHTEC_DIAG_FAR_END,
};
enum switchtec_diag_link {
	SWITCHTEC_DIAG_LINK_CURRENT,
	SWITCHTEC_DIAG_LINK_PREVIOUS,
};
struct switchtec_diag_ltssm_log {
	unsigned int timestamp;
	float link_rate;
	int link_state;
	/* Gen 6 stucture variables */
	int link_width;
	int tx_minor_state;
	int rx_minor_state;
};
int switchtec_diag_eye_read(struct switchtec_dev *dev, int lane_id, int bin, 
		            int* num_phases, double* ber_data);
int switchtec_diag_eye_start(struct switchtec_dev *dev, int lane_mask[4],
			     struct range *x_range, struct range *y_range,
			     int step_interval, int capture_depth, int sar_sel,
			     int intleav_sel, int hstep, int data_mode, 
			     int eye_mode, uint64_t refclk, int vstep);
int switchtec_diag_eye_fetch(struct switchtec_dev *dev, double *pixels,
			     size_t pixel_cnt, int *lane_id);
int switchtec_diag_eye_cancel(struct switchtec_dev *dev);
int switchtec_diag_loopback_set(struct switchtec_dev *dev, int port_id, 
				int enable, int enable_parallel, 
				int enable_external, int enable_ltssm,
				int enable_pipe,
				enum switchtec_diag_ltssm_speed ltssm_speed);
int switchtec_diag_loopback_get(struct switchtec_dev *dev, int port_id,
				int *enabled, 
				enum switchtec_diag_ltssm_speed *ltssm_speed);
int switchtec_diag_pattern_gen_set(struct switchtec_dev *dev, int port_id,
				   enum switchtec_diag_pattern type,
				   enum switchtec_diag_pattern_link_rate 
				   link_speed);
int switchtec_diag_pattern_gen_get(struct switchtec_dev *dev, int port_id,
				   enum switchtec_diag_pattern *type);
int switchtec_diag_pattern_mon_set(struct switchtec_dev *dev, int port_id,
				   enum switchtec_diag_pattern type);
int switchtec_diag_pattern_mon_get(struct switchtec_dev *dev, int port_id,
				   int lane_id, 
				   enum switchtec_diag_pattern *type,
				   unsigned long long *err_cnt);
int switchtec_diag_pattern_inject(struct switchtec_dev *dev, int port_id,
				  unsigned int err_cnt);
int switchtec_diag_rcvr_obj(struct switchtec_dev *dev, int port_id,
		int lane_id, enum switchtec_diag_link link,
		struct switchtec_rcvr_obj *res);
int switchtec_diag_rcvr_ext(struct switchtec_dev *dev, int port_id,
			    int lane_id, enum switchtec_diag_link link,
			    struct switchtec_rcvr_ext *res);
int switchtec_diag_port_eq_tx_coeff(struct switchtec_dev *dev, int port_id, 
				    int prev_speed, enum switchtec_diag_end end, 
				    enum switchtec_diag_link link,
				    struct switchtec_port_eq_coeff *res);
int switchtec_diag_port_eq_tx_table(struct switchtec_dev *dev, int port_id, 
				    int prev_speed, 
				    enum switchtec_diag_link link,
				    struct switchtec_port_eq_table *res);
int switchtec_diag_port_eq_tx_fslf(struct switchtec_dev *dev, int port_id, 
				   int prev_speed, int lane_id, 
				   enum switchtec_diag_end end,
				   enum switchtec_diag_link link,
				   struct switchtec_port_eq_tx_fslf *res);
int switchtec_diag_ltssm_clear(struct switchtec_dev *dev, int port);
int switchtec_diag_ltssm_log(struct switchtec_dev *dev,
			     int port, int *log_count,
			     struct switchtec_diag_ltssm_log *log_data);
int switchtec_osa(struct switchtec_dev * dev, int stack_id, int operation);
int switchtec_osa_config_type(struct switchtec_dev * dev, int stack_id, 
			      int direction, int lane_mask, int link_rate, 
			      int os_types);
int switchtec_osa_capture_control(struct switchtec_dev * dev, int stack_id, 
				  int lane_mask, int direction, 
				  int drop_single_os, int stop_mode,
				  int snapshot_mode, int post_trigger, 
				  int os_types);
int switchtec_osa_dump_conf(struct switchtec_dev * dev, int stack_id);
int switchtec_osa_config_pattern(struct switchtec_dev * dev, int stack_id, 
				 int direction, int lane_mask,int link_rate, 
				 uint32_t * value_data, uint32_t * mask_data);
int switchtec_osa_capture_data(struct switchtec_dev * dev, int stack_id, 
			       int lane, int direction);