src/serialcables_switchtec/bindings/functions.py


    # int switchtec_diag_eye_start(struct switchtec_dev *dev, int lane_mask[4],
    #     struct range *x_range, struct range *y_range, int step_interval,
    #     int capture_depth, int sar_sel, int intleav_sel, int hstep,
    #     int data_mode, int eye_mode, uint64_t refclk, int vstep)
    lib.switchtec_diag_eye_start.argtypes = [
        c_void_p,
        c_int * 4,
        POINTER(Range),
        POINTER(Range),
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_uint64,
        c_int,
    ]
    lib.switchtec_diag_eye_start.restype = c_int

    # int switchtec_diag_eye_fetch(struct switchtec_dev *dev, double *pixels,
    #     size_t pixel_cnt, int *lane_id)
    lib.switchtec_diag_eye_fetch.argtypes = [c_void_p, POINTER(c_double), c_size_t, POINTER(c_int)]
    lib.switchtec_diag_eye_fetch.restype = c_int

    lib.switchtec_diag_eye_cancel.argtypes = [c_void_p]
    lib.switchtec_diag_eye_cancel.restype = c_int

    # int switchtec_diag_eye_read(struct switchtec_dev *dev, int lane_id,
    #     int bin, int* num_phases, double* ber_data)
    lib.switchtec_diag_eye_read.argtypes = [
        c_void_p,
        c_int,
        c_int,
        POINTER(c_int),
        POINTER(c_double),
    ]
    lib.switchtec_diag_eye_read.restype = c_int

    # ── Loopback ──
    lib.switchtec_diag_loopback_set.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
    ]
    lib.switchtec_diag_loopback_set.restype = c_int

    lib.switchtec_diag_loopback_get.argtypes = [c_void_p, c_int, POINTER(c_int), POINTER(c_int)]
    lib.switchtec_diag_loopback_get.restype = c_int

    # ── Pattern Gen/Mon ──
    lib.switchtec_diag_pattern_gen_set.argtypes = [c_void_p, c_int, c_int, c_int]
    lib.switchtec_diag_pattern_gen_set.restype = c_int

    lib.switchtec_diag_pattern_gen_get.argtypes = [c_void_p, c_int, POINTER(c_int)]
    lib.switchtec_diag_pattern_gen_get.restype = c_int

    lib.switchtec_diag_pattern_mon_set.argtypes = [c_void_p, c_int, c_int]
    lib.switchtec_diag_pattern_mon_set.restype = c_int

    lib.switchtec_diag_pattern_mon_get.argtypes = [
        c_void_p,
        c_int,
        c_int,
        POINTER(c_int),
        POINTER(c_uint64),
    ]
    lib.switchtec_diag_pattern_mon_get.restype = c_int

    lib.switchtec_diag_pattern_inject.argtypes = [c_void_p, c_int, ctypes.c_uint]
    lib.switchtec_diag_pattern_inject.restype = c_int

    # ── Receiver Object ──
    lib.switchtec_diag_rcvr_obj.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        POINTER(SwitchtecRcvrObj),
    ]
    lib.switchtec_diag_rcvr_obj.restype = c_int

    lib.switchtec_diag_rcvr_ext.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        POINTER(SwitchtecRcvrExt),
    ]
    lib.switchtec_diag_rcvr_ext.restype = c_int

    # ── Port EQ ──
    lib.switchtec_diag_port_eq_tx_coeff.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        POINTER(SwitchtecPortEqCoeff),
    ]
    lib.switchtec_diag_port_eq_tx_coeff.restype = c_int

    lib.switchtec_diag_port_eq_tx_table.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        POINTER(SwitchtecPortEqTable),
    ]
    lib.switchtec_diag_port_eq_tx_table.restype = c_int

    lib.switchtec_diag_port_eq_tx_fslf.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        POINTER(SwitchtecPortEqTxFslf),
    ]
    lib.switchtec_diag_port_eq_tx_fslf.restype = c_int

    # ── LTSSM Log ──
    lib.switchtec_diag_ltssm_log.argtypes = [
        c_void_p,
        c_int,
        POINTER(c_int),
        POINTER(SwitchtecDiagLtssmLog),
    ]
    lib.switchtec_diag_ltssm_log.restype = c_int

    lib.switchtec_diag_ltssm_clear.argtypes = [c_void_p, c_int]
    lib.switchtec_diag_ltssm_clear.restype = c_int


def _setup_inject_functions(lib: ctypes.CDLL) -> None:
    """Error injection functions."""

    lib.switchtec_inject_err_dllp.argtypes = [c_void_p, c_int, c_int]
    lib.switchtec_inject_err_dllp.restype = c_int

    lib.switchtec_inject_err_dllp_crc.argtypes = [c_void_p, c_int, c_int, c_uint16]
    lib.switchtec_inject_err_dllp_crc.restype = c_int

    lib.switchtec_inject_err_tlp_lcrc.argtypes = [c_void_p, c_int, c_int, c_uint8]
    lib.switchtec_inject_err_tlp_lcrc.restype = c_int

    lib.switchtec_inject_err_tlp_seq_num.argtypes = [c_void_p, c_int]
    lib.switchtec_inject_err_tlp_seq_num.restype = c_int

    lib.switchtec_inject_err_ack_nack.argtypes = [c_void_p, c_int, c_uint16, c_uint8]
    lib.switchtec_inject_err_ack_nack.restype = c_int

    lib.switchtec_inject_err_cto.argtypes = [c_void_p, c_int]
    lib.switchtec_inject_err_cto.restype = c_int


def _setup_osa_functions(lib: ctypes.CDLL) -> None:
    """Ordered Set Analyzer functions."""

    lib.switchtec_osa.argtypes = [c_void_p, c_int, c_int]
    lib.switchtec_osa.restype = c_int

    lib.switchtec_osa_config_type.argtypes = [c_void_p, c_int, c_int, c_int, c_int, c_int]
    lib.switchtec_osa_config_type.restype = c_int

    lib.switchtec_osa_config_pattern.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        POINTER(c_uint32),
        POINTER(c_uint32),
    ]
    lib.switchtec_osa_config_pattern.restype = c_int

    lib.switchtec_osa_capture_control.argtypes = [
        c_void_p,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
        c_int,
    ]
    lib.switchtec_osa_capture_control.restype = c_int

    lib.switchtec_osa_capture_data.argtypes = [c_void_p, c_int, c_int, c_int]
    lib.switchtec_osa_capture_data.restype = c_int

    lib.switchtec_osa_dump_conf.argtypes = [c_void_p, c_int]
    lib.switchtec_osa_dump_conf.restype = c_int


def _setup_fabric_functions(lib: ctypes.CDLL) -> None:
    """Fabric/topology function prototypes for PAX devices."""

    # int switchtec_topo_info_dump(struct switchtec_dev *dev,
    #     struct switchtec_fab_topo_info *topo_info)
    lib.switchtec_topo_info_dump.argtypes = [c_void_p, c_void_p]
    lib.switchtec_topo_info_dump.restype = c_int

    # int switchtec_fab_port_config_get(struct switchtec_dev *dev,
    #     uint8_t phys_port_id, struct switchtec_fab_port_config *info)
    lib.switchtec_fab_port_config_get.argtypes = [c_void_p, c_uint8, POINTER(SwitchtecFabPortConfig)]
    lib.switchtec_fab_port_config_get.restype = c_int

    # int switchtec_fab_port_config_set(struct switchtec_dev *dev,
    #     uint8_t phys_port_id, struct switchtec_fab_port_config *info)
    lib.switchtec_fab_port_config_set.argtypes = [c_void_p, c_uint8, POINTER(SwitchtecFabPortConfig)]
    lib.switchtec_fab_port_config_set.restype = c_int

    # int switchtec_port_control(struct switchtec_dev *dev,
    #     uint8_t control_type, uint8_t phys_port_id,
    #     uint8_t hot_reset_flag)
    lib.switchtec_port_control.argtypes = [
        c_void_p,
        c_uint8,
        c_uint8,
        c_uint8,
    ]
    lib.switchtec_port_control.restype = c_int

    # int switchtec_gfms_bind(struct switchtec_dev *dev,
    #     struct switchtec_gfms_bind_req *req)
    lib.switchtec_gfms_bind.argtypes = [c_void_p, POINTER(SwitchtecGfmsBindReq)]
    lib.switchtec_gfms_bind.restype = c_int

    # int switchtec_gfms_unbind(struct switchtec_dev *dev,
    #     struct switchtec_gfms_unbind_req *req)
    lib.switchtec_gfms_unbind.argtypes = [c_void_p, POINTER(SwitchtecGfmsUnbindReq)]
    lib.switchtec_gfms_unbind.restype = c_int

    # int switchtec_get_gfms_events(struct switchtec_dev *dev,
    #     struct switchtec_gfms_event *elist, size_t elist_len,
    #     int *overflow, size_t *remain_number)
    lib.switchtec_get_gfms_events.argtypes = [
        c_void_p,
        c_void_p,
        c_size_t,
        POINTER(c_int),
        POINTER(c_size_t),
    ]
    lib.switchtec_get_gfms_events.restype = c_int

    # int switchtec_clear_gfms_events(struct switchtec_dev *dev)
    lib.switchtec_clear_gfms_events.argtypes = [c_void_p]
    lib.switchtec_clear_gfms_events.restype = c_int
